# mdbpbackend

./: .gitignore  Cargo.toml  README.md  build.rs  protofetch.toml
config/: local.yaml
migrations/: 20250609171735_creates_records_table.up.sql
proto/medpass/records/v1/: record.proto
proto/medpass/users/v1/: users.proto
scripts/dev/: add_record.sh  init_db.sh
src/: error.rs  lib.rs  main.rs
src/config/: application.rs
src/domain/: enums.rs  mod.rs  new_record.rs  user.rs  user_record.rs
src/grpc/: authorization.rs  convert.rs  mod.rs  record_service.rs  user_service.rs
src/handlers/: mod.rs  records.rs  users.rs
src/infrastructure/: db.rs  files_storage.rs  mod.rs
src/infrastructure/models/: mod.rs  record_row.rs  user_row.rs
src/infrastructure/repositories/: mod.rs  records_repository.rs  users_repository.rs
