[package]
name = "mdpbackend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1.17"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "tls-rustls",
    "uuid",
    "time",
    "migrate"
] }
tonic = { version = "0.13.1", features = ["server"] }
prost-types = "0.13.5"
prost = "0.13.5"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v7", "serde", "fast-rng"] }
serde = { version = "1.0.219", features = ["derive"] }
aws-sdk-s3 = "1.91.0"
config = "0.15.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-loki = "0.2.6"
aws-config = "1.6.3"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
sha2 = "0.10.9"
hex = "0.4.3"
bytes = "1.10.1"
thiserror = "2.0.12"

[build-dependencies]
tonic-build = "0.13.1"
